fix: hide grid wraper

--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -99,6 +99,7 @@
 
   .grid-wrap {
     height: auto;
+    background: transparent !important;
   }
 }
 
