--- a/src/sass/_theme-dark.scss
+++ b/src/sass/_theme-dark.scss
@@ -162,7 +162,8 @@
     --bs-table-color: #a2a2a2;
   }
 
-  .grid-wrap {
+  .grid-wrap,
+  .grid-container {
     background: #0a1c3898;
   }
 
