--- a/src/sass/_theme-light.scss
+++ b/src/sass/_theme-light.scss
@@ -171,7 +171,8 @@
     --bs-table-bg-rgb: #{to-rgb(#ecfbfffa)};
   }
 
-  .grid-wrap {
+  .grid-wrap,
+  .grid-container {
     background: #60719698;
   }
 
